# lstm-test

./: .gitignore  README.md  collect_rp2040_modbus.py  collect_weather.py  collect_weather_backfill.py  db.py  lstm_train.py  ml_shared.py  modbus_emulator.py  pyproject.toml  train_baseline.py  weather_public.py
seed/: README.md  power_realtime_seed.sql
