[project]
name = "lstm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.3",
    "pymodbus>=3.13.0",
    "pymysql>=1.2.0",
    "pyserial>=3.5",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "tensorflow>=2.21.0",
]
